src/snapshots/cronexpr__parser__tests__parse_crontab_success-11.snap
---
source: src/parser.rs
expression: "parse_crontab(\"1-10,2,10,50 1 * 1 TUE Asia/Shanghai\").unwrap()"
---
Crontab {
    minutes: PossibleLiterals {
        values: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            50,
        },
    },
    hours: PossibleLiterals {
        values: {
            1,
        },
    },
    months: PossibleLiterals {
        values: {
            1,
        },
    },
    days_of_month: PossibleDaysOfMonth {
        literals: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
            13,
            14,
            15,
            16,
            17,
            18,
            19,
            20,
            21,
            22,
            23,
            24,
            25,
            26,
            27,
            28,
            29,
            30,
            31,
        },
        last_day_of_month: false,
        nearest_weekdays: {},
    },
    days_of_week: PossibleDaysOfWeek {
        literals: {
            2,
        },
        last_days_of_week: {},
        nth_days_of_week: {},
    },
    timezone: TimeZone(
        TZif(
            "Asia/Shanghai",
        ),
    ),
}
