src/snapshots/cronexpr__parser__tests__parse_crontab_success-3.snap
---
source: src/parser.rs
expression: "parse_crontab(\"2 4 * * 0-6 Asia/Shanghai\").unwrap()"
---
Crontab {
    minutes: PossibleLiterals {
        values: {
            2,
        },
    },
    hours: PossibleLiterals {
        values: {
            4,
        },
    },
    months: PossibleLiterals {
        values: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
        },
    },
    days_of_month: ParsedDaysOfMonth {
        literals: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
            13,
            14,
            15,
            16,
            17,
            18,
            19,
            20,
            21,
            22,
            23,
            24,
            25,
            26,
            27,
            28,
            29,
            30,
            31,
        },
        last_day_of_month: false,
        nearest_weekdays: {},
        start_with_asterisk: true,
    },
    days_of_week: ParsedDaysOfWeek {
        literals: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
        },
        last_days_of_week: {},
        nth_days_of_week: {},
        start_with_asterisk: false,
    },
    timezone: TimeZone(
        TZif(
            "Asia/Shanghai",
        ),
    ),
}
