src/snapshots/cronexpr__parser__tests__parse_crontab_success-5.snap
---
source: src/parser.rs
expression: "parse_crontab(\"*/2 1 1 1 * Asia/Shanghai\").unwrap()"
---
Crontab {
    minutes: PossibleLiterals {
        values: {
            0,
            2,
            4,
            6,
            8,
            10,
            12,
            14,
            16,
            18,
            20,
            22,
            24,
            26,
            28,
            30,
            32,
            34,
            36,
            38,
            40,
            42,
            44,
            46,
            48,
            50,
            52,
            54,
            56,
            58,
        },
    },
    hours: PossibleLiterals {
        values: {
            1,
        },
    },
    months: PossibleLiterals {
        values: {
            1,
        },
    },
    days_of_month: PossibleLiterals {
        values: {
            1,
        },
    },
    days_of_week: PossibleLiterals {
        values: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
        },
    },
    timezone: TimeZone(
        TZif(
            "Asia/Shanghai",
        ),
    ),
}
